@@ -1,3 +1,8 @@
+2009-06-20  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/40452
+	* gfortran.dg/bounds_check_strlen_9.f90: New test.
+
 2009-06-19  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/40440
